Swagger integration and methods creation
