# Routes/user_management-service.js
@@ -8,5 +8,8 @@ router.post("/add_user_address", userServices.add_user_address);
 router.get("/userdata_with_address/:id", userServices.userdata);
 router.put("/single_user_data/:id", userServices.singleuserdata);
 router.delete("/delete_single_user/:id", userServices.deleteuser);
-
+router.delete(
+  "/delete_same_user_diffcollection/:id",
+  userServices.deletemanyuser
+);
 module.exports = router;
